--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -1,26 +1,136 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VDU-28-BQV">
+                                <rect key="frame" x="69" y="241" width="31" height="30"/>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <action selector="btnPrev:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qi8-OS-WKI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ppw-Ek-dCy">
+                                <rect key="frame" x="145" y="241" width="31" height="30"/>
+                                <state key="normal" title="進む"/>
+                                <connections>
+                                    <action selector="btnNext:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PcS-SH-8xt"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wvV-hO-xj4">
+                                <rect key="frame" x="221" y="241" width="31" height="30"/>
+                                <state key="normal" title="再生"/>
+                                <connections>
+                                    <action selector="btnPlay:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sb5-HC-8L9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4qA-2n-YC9">
+                                <rect key="frame" x="145" y="336" width="31" height="30"/>
+                                <state key="normal" title="拡大">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="1eZ-Jc-3Fg" kind="show" id="Sj5-sT-BPJ"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="3Yl-yC-zoj">
+                                <rect key="frame" x="69" y="83" width="183" height="124"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="183" id="BQg-tO-al3"/>
+                                    <constraint firstAttribute="height" constant="124" id="m5i-9M-7Md"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3Yl-yC-zoj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="63" id="64G-Ja-Lta"/>
+                            <constraint firstItem="Ppw-Ek-dCy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EmZ-w2-5W0"/>
+                            <constraint firstItem="4qA-2n-YC9" firstAttribute="top" secondItem="Ppw-Ek-dCy" secondAttribute="bottom" constant="65" id="LdJ-lG-rwI"/>
+                            <constraint firstItem="Ppw-Ek-dCy" firstAttribute="leading" secondItem="VDU-28-BQV" secondAttribute="trailing" constant="45" id="OSY-Wl-sg6"/>
+                            <constraint firstItem="Ppw-Ek-dCy" firstAttribute="top" secondItem="3Yl-yC-zoj" secondAttribute="bottom" constant="34" id="VAt-Qs-GyC"/>
+                            <constraint firstItem="3Yl-yC-zoj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VgC-x9-sXs"/>
+                            <constraint firstItem="wvV-hO-xj4" firstAttribute="leading" secondItem="Ppw-Ek-dCy" secondAttribute="trailing" constant="45" id="X4b-3g-R5s"/>
+                            <constraint firstItem="VDU-28-BQV" firstAttribute="top" secondItem="3Yl-yC-zoj" secondAttribute="bottom" constant="34" id="XOA-sc-Scb"/>
+                            <constraint firstItem="wvV-hO-xj4" firstAttribute="top" secondItem="3Yl-yC-zoj" secondAttribute="bottom" constant="34" id="cfP-te-BhP"/>
+                            <constraint firstItem="4qA-2n-YC9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sJv-2l-ZMQ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="btnNext" destination="Ppw-Ek-dCy" id="LBb-7I-G6O"/>
+                        <outlet property="btnPlay" destination="wvV-hO-xj4" id="4U3-OL-UoA"/>
+                        <outlet property="btnPrev" destination="VDU-28-BQV" id="tqG-Wp-hb1"/>
+                        <outlet property="imageView" destination="3Yl-yC-zoj" id="lv5-2B-Mow"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116.25" y="122.53521126760563"/>
+        </scene>
+        <!--Zoom Up View Controller-->
+        <scene sceneID="8b5-Ej-TPx">
+            <objects>
+                <viewController storyboardIdentifier="zoom" id="1eZ-Jc-3Fg" customClass="ZoomUpViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fT4-Vd-Bqf"/>
+                        <viewControllerLayoutGuide type="bottom" id="MG9-ia-Jkv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ueG-gV-FFd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cat.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="V71-mJ-BuF">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="520"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L32-pV-4eP">
+                                <rect key="frame" x="145" y="528" width="31" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="49f-Q3-FeN"/>
+                                </constraints>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <segue destination="47J-wF-cMN" kind="unwind" unwindAction="unwindWithSegue:" id="QaX-nC-wpm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="V71-mJ-BuF" secondAttribute="trailing" id="3HA-UW-0Ws"/>
+                            <constraint firstItem="V71-mJ-BuF" firstAttribute="leading" secondItem="ueG-gV-FFd" secondAttribute="leading" id="KZv-BV-AMp"/>
+                            <constraint firstItem="MG9-ia-Jkv" firstAttribute="top" secondItem="L32-pV-4eP" secondAttribute="bottom" constant="10" id="UVQ-BB-Aza"/>
+                            <constraint firstItem="L32-pV-4eP" firstAttribute="centerX" secondItem="ueG-gV-FFd" secondAttribute="centerX" id="kE7-yw-1Xi"/>
+                            <constraint firstItem="V71-mJ-BuF" firstAttribute="top" secondItem="ueG-gV-FFd" secondAttribute="top" id="w2S-Cr-WsM"/>
+                            <constraint firstItem="L32-pV-4eP" firstAttribute="top" secondItem="V71-mJ-BuF" secondAttribute="bottom" constant="8" id="yYt-kt-8tT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="V71-mJ-BuF" id="bih-GQ-jOL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gqB-fd-G7l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="47J-wF-cMN" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1016.25" y="122.53521126760563"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="cat.jpeg" width="225" height="225"/>
+    </resources>
 </document>
